--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-ripples": "^2.2.1",
     "react-scripts": "5.0.1",
     "react-spinners": "^0.13.8",
+    "react-terminal": "^1.4.4",
     "react-type-animation": "^3.2.0",
     "web-vitals": "^2.1.4"
   },
