--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-spinners": "^0.13.8",
     "react-terminal": "^1.4.4",
     "react-type-animation": "^3.2.0",
+    "sass": "^1.77.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
